--- a/app/src/main/res/layout/activity_add_pres_info.xml
+++ b/app/src/main/res/layout/activity_add_pres_info.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="118dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/header" />
 
     <ScrollView
-        android:layout_width="410dp"
+        android:layout_width="0dp"
         android:layout_height="613dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/pres_image"
@@ -48,7 +48,7 @@
 
             <EditText
                 android:id="@+id/Pres_city"
-                android:layout_width="388dp"
+                android:layout_width="match_parent"
                 android:layout_height="49dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/btn03style"
