--- a/app/src/main/res/layout/activity_myprescription.xml
+++ b/app/src/main/res/layout/activity_myprescription.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="116dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
