create Appointment Recycler Adapter

--- a/app/src/main/res/layout/activity_channel_list.xml
+++ b/app/src/main/res/layout/activity_channel_list.xml
@@ -58,6 +58,7 @@
         app:srcCompat="@drawable/img2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="0dp"
         android:layout_height="600dp"
         android:layout_marginStart="8dp"
