--- a/app/src/main/res/layout/channel_details_row.xml
+++ b/app/src/main/res/layout/channel_details_row.xml
@@ -15,11 +15,11 @@
 
         <ImageView
             android:id="@+id/dp"
-            android:layout_width="249dp"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
             android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars"
-            android:contentDescription="TODO" />
+            android:contentDescription="TODO"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
             android:layout_width="match_parent"
