--- a/app/src/main/res/layout/activity_myprescription.xml
+++ b/app/src/main/res/layout/activity_myprescription.xml
@@ -27,7 +27,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/pres_recycler_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="530dp" />
 
     </LinearLayout>
 
@@ -44,5 +44,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView17"
         app:layout_constraintVertical_bias="0.484" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="416dp"
+        android:layout_height="76dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomappnavigate"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:itemBackground="@android:color/holo_blue_dark"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/bottom_navigate"></com.google.android.material.bottomnavigation.BottomNavigationView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
