--- a/app/src/main/res/layout/pharmacy_rawdata.xml
+++ b/app/src/main/res/layout/pharmacy_rawdata.xml
@@ -22,7 +22,7 @@
         app:layout_constraintBottom_toTopOf="@+id/par_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintStart_toEndOf="@+id/phar_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.062" />
 
@@ -35,10 +35,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView16" />
+        app:layout_constraintStart_toEndOf="@+id/phar_image" />
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/phar_image"
         android:layout_width="150dp"
         android:layout_height="182dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="225dp"
         android:layout_height="30dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintStart_toEndOf="@+id/phar_image"
         app:layout_constraintTop_toBottomOf="@+id/par_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
