--- a/app/src/main/res/layout/activity_patient_profile.xml
+++ b/app/src/main/res/layout/activity_patient_profile.xml
@@ -61,7 +61,7 @@
             android:id="@+id/updatePatientBtn1"
             android:layout_width="282dp"
             android:layout_height="54dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="14dp"
             android:background="@drawable/buttontype02"
             android:text="@string/update"
             app:backgroundTint="@android:color/holo_blue_dark"
@@ -72,8 +72,8 @@
 
         <ImageView
             android:id="@+id/profile_img"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="408dp"
+            android:layout_height="177dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -98,7 +98,6 @@
             android:layout_marginStart="54dp"
             android:layout_marginTop="56dp"
             android:drawableStart="@drawable/ic_username"
-            android:text="   TextView"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +110,6 @@
             android:layout_marginStart="54dp"
             android:layout_marginTop="96dp"
             android:drawableStart="@drawable/ic_email"
-            android:text="   TextView"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +122,6 @@
             android:layout_marginStart="54dp"
             android:layout_marginTop="140dp"
             android:drawableStart="@drawable/ic_baseline_location_on_24"
-            android:text="   TextView"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +134,6 @@
             android:layout_marginStart="54dp"
             android:layout_marginTop="180dp"
             android:drawableStart="@drawable/ic_baseline_local_phone_24"
-            android:text="   TextView"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -145,8 +141,10 @@
 
         <Button
             android:id="@+id/user_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="128dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="16dp"
             android:backgroundTint="#EA0D0D"
             android:text="Logout"
             app:layout_constraintBottom_toTopOf="@+id/updatePatientBtn1"
