--- a/app/src/main/res/layout/activity_patient_sign_up.xml
+++ b/app/src/main/res/layout/activity_patient_sign_up.xml
@@ -135,10 +135,12 @@
             android:id="@+id/patientSaveBtn"
             android:layout_width="282dp"
             android:layout_height="54dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/buttontype02"
             android:text="@string/save"
             app:backgroundTint="@android:color/holo_blue_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +151,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="606dp"
+            android:layout_marginTop="600dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
