--- a/app/src/main/res/layout/activity_doctor_account.xml
+++ b/app/src/main/res/layout/activity_doctor_account.xml
@@ -26,13 +26,11 @@
             android:layout_width="62dp"
             android:layout_height="46dp"
             android:layout_marginStart="31dp"
+            android:layout_marginTop="9dp"
             android:drawableStart="@drawable/ic_back"
             android:textSize="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView16"
-            app:layout_constraintEnd_toStartOf="@+id/textView16"
-            app:layout_constraintHorizontal_bias="0.295"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView16" />
+            app:layout_constraintTop_toTopOf="@+id/imageView20" />
 
         <TextView
             android:id="@+id/pid"
@@ -46,124 +44,97 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView22"
-            android:layout_width="0dp"
-            android:layout_height="299dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_picker"
-            app:srcCompat="@drawable/header"
-            tools:srcCompat="@drawable/header" />
-
         <Button
-            android:id="@+id/updatePatientBtn1"
+            android:id="@+id/viewAppointmentBtn"
             android:layout_width="282dp"
             android:layout_height="54dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/buttontype02"
-            android:text="@string/update"
+            android:layout_marginTop="16dp"
 
-            app:backgroundTint="@android:color/holo_blue_dark"
-            app:layout_constraintBottom_toTopOf="@+id/user_logout"
+            android:backgroundTint="@color/teal_700"
+            android:text="@string/viewAppointment"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView22" />
+            app:layout_constraintTop_toBottomOf="@+id/appointmentDate" />
+
+        <Button
+            android:id="@+id/updateProfileBtn"
+            android:layout_width="282dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="16dp"
+
+            android:background="@drawable/buttontype02"
+            android:text="@string/updadeProfile"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewAppointmentBtn" />
+
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_width="282dp"
+            android:layout_height="54dp"
+
+            android:layout_marginTop="16dp"
+            android:background="@drawable/buttontype02"
+            android:text="@string/logout"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/updateProfileBtn" />
+
+        <Button
+            android:id="@+id/deleteProfileBtn"
+            android:layout_width="282dp"
+            android:layout_height="54dp"
+
+            android:layout_marginTop="16dp"
+            android:background="@drawable/buttontype02"
+            android:text="@string/deleteAccount"
+            app:backgroundTint="?attr/colorError"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logoutBtn" />
 
         <ImageView
-            android:id="@+id/profile_img"
-            android:layout_width="408dp"
-            android:layout_height="177dp"
+            android:id="@+id/doctor_profile_img"
+            android:layout_width="332dp"
+            android:layout_height="164dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView20"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageView
-            android:id="@+id/image_picker"
+            android:id="@+id/doctor_image_picker"
             android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_marginTop="128dp"
+            app:layout_constraintBottom_toBottomOf="@+id/doctor_profile_img"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/profile_img"
+            app:layout_constraintTop_toTopOf="@+id/doctor_profile_img"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
-        <TextView
-            android:id="@+id/ex_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="54dp"
-            android:layout_marginTop="56dp"
-            android:drawableStart="@drawable/ic_username"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView22" />
-
-        <TextView
-            android:id="@+id/ex_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="54dp"
-            android:layout_marginTop="96dp"
-            android:drawableStart="@drawable/ic_email"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView22" />
-
-        <TextView
-            android:id="@+id/ex_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="54dp"
-            android:layout_marginTop="140dp"
-            android:drawableStart="@drawable/ic_baseline_location_on_24"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView22" />
-
-        <TextView
-            android:id="@+id/ex_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="54dp"
-            android:layout_marginTop="180dp"
-            android:drawableStart="@drawable/ic_baseline_local_phone_24"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView22" />
-
-        <Button
-            android:id="@+id/user_logout"
-            android:layout_width="128dp"
-            android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
-            android:backgroundTint="#EA0D0D"
-            android:text="Logout"
-            app:layout_constraintBottom_toBottomOf="parent"
-
+        <EditText
+            android:id="@+id/appointmentDate"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/btn03style"
+            android:ems="10"
+            android:hint="@string/date"
+            android:inputType="numberDecimal"
+            android:paddingStart="6dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/doctor_profile_img" />
 
-        <ProgressBar
-            android:id="@+id/progressBar2"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/image_picker"
-            app:layout_constraintStart_toStartOf="@+id/image_picker"
-            app:layout_constraintTop_toBottomOf="@+id/profile_img" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
