--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -246,7 +246,7 @@
             android:layout_width="150dp"
             android:layout_height="45dp"
             android:background="@drawable/buttontype02"
-            android:text="Body FIT"
+            android:text="WHR"
             app:backgroundTint="@color/design_default_color_secondary_variant"
             app:layout_constraintBottom_toBottomOf="@+id/bmiBtn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -258,12 +258,12 @@
             android:id="@+id/bottomappnavigate"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="90dp"
             app:itemBackground="@android:color/holo_blue_dark"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/callAmbulanceBtn"
             app:menu="@menu/bottom_navigate"></com.google.android.material.bottomnavigation.BottomNavigationView>
